tests/snapshots/run_wpt_conformance__onnx_prelu_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "prelu.https.any.js",
    "prelu float16 0D scalar",
    "onnx",
    "PASS",
)
