tests/snapshots/run_wpt_conformance__onnx_prelu_float16_broadcast_4D_x_1D_slope.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "prelu.https.any.js",
    "prelu float16 broadcast 4D x 1D slope",
    "onnx",
    "PASS",
)
